[package]
name = "token-review"
version = "0.2.0"
edition = "2021"
description = "Kubernetes TokenReview API with cache"
license = "MIT"
repository = "https://github.com/Hakuyume/token-review-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["v1_28"]

[features]
default = ["rustls-tls"]
openssl-tls = ["kube/openssl-tls"]
rustls-tls = ["kube/rustls-tls"]

v1_22 = ["k8s-openapi/v1_22"]
v1_23 = ["k8s-openapi/v1_23"]
v1_24 = ["k8s-openapi/v1_24"]
v1_25 = ["k8s-openapi/v1_25"]
v1_26 = ["k8s-openapi/v1_26"]
v1_27 = ["k8s-openapi/v1_27"]
v1_28 = ["k8s-openapi/v1_28"]

[dependencies]
base64 = "0.21"
chrono = "0.4"
k8s-openapi = "0.20"
kube = { version = "0.87", default-features = false, features = ["client"] }
ref-cast = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tower = "0.4"
